refactor: fixed error page and documentation

--- a/assets/scss/base/htmlElements.scss
+++ b/assets/scss/base/htmlElements.scss
@@ -40,8 +40,9 @@ option {
 
   &:focus {
     @apply
-    ring-2
-    ring-primary-500
+      outline
+    outline-2
+    outline-primary
     rounded;
   }
 }
