--- a/assets/scss/components/atoms/buttons.scss
+++ b/assets/scss/components/atoms/buttons.scss
@@ -6,9 +6,9 @@
   .button {
     @apply border
     border-transparent
-    focus:outline-none
-    focus:ring-2
-    focus:ring-offset-2
+    focus:outline
+    focus:outline-2
+    focus:outline-primary
     font-medium
     hover:no-underline
     inline-flex
@@ -26,7 +26,7 @@
         @apply
         bg-primary-500
         hover:bg-primary-700
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-white;
 
         &.button-text,
@@ -56,7 +56,7 @@
         @apply
         bg-secondary-500
         hover:bg-secondary-700
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-white;
 
         &.button-text,
@@ -85,7 +85,7 @@
         @apply
         bg-rose-500
         hover:bg-rose-700
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-white;
 
         &.button-text,
@@ -114,7 +114,7 @@
         @apply
         bg-yellow-500
         hover:bg-yellow-700
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-white;
 
         &.button-text,
@@ -143,7 +143,7 @@
         @apply
         bg-blue-500
         hover:bg-blue-700
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-white;
 
         &.button-text,
@@ -170,7 +170,7 @@
       &--transparent {
         @apply
         bg-white
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-primary-700;
 
         &.button-text,
@@ -197,7 +197,7 @@
       &--white {
         @apply
         bg-white
-        focus:ring-primary-500
+        focus:outline-primary
         hover:text-primary-700
         hover:bg-gray-100
         bg-none;
