feat: initial video page based on md

--- a/assets/scss/components/molecules/megamenu.scss
+++ b/assets/scss/components/molecules/megamenu.scss
@@ -52,7 +52,7 @@
       text-base
       text-center
       text-gray-900
-      font-red-hat-display
+      font-serif
       w-fit;
 
       & svg,
@@ -64,6 +64,6 @@
         ml-2;
       }
     }
-
   }
 }
+
