--- a/assets/scss/content/prose.scss
+++ b/assets/scss/content/prose.scss
@@ -1,1 +1,5 @@
+@use "assets/scss/content/prose/a";
 @use "assets/scss/content/prose/code";
+@use "assets/scss/content/prose/codeInline";
+@use "assets/scss/content/button";
+@use "assets/scss/content/codeGroup";
