--- a/assets/scss/content/prose/code.scss
+++ b/assets/scss/content/prose/code.scss
@@ -47,7 +47,7 @@
   }
 
   .code-inline {
-    @apply bg-gray-800 rounded-lg font-monospace text-gray-50 px-1 py-0.5;
+    @apply bg-gray-800 rounded-lg font-monospace text-white px-1 py-0.5;
   }
 
   pre code .line {
