--- a/assets/scss/components/atoms/buttons.scss
+++ b/assets/scss/components/atoms/buttons.scss
@@ -18,6 +18,7 @@
     text-center
     uppercase
     truncate
+    mx-1
     w-fit;
 
     &-color {
@@ -320,6 +321,21 @@
           @apply
           text-blue-500
           hover:text-white;
+        }
+      }
+
+      &--white {
+        @apply
+        text-primary-500
+        hover:shadow-sm
+        border-gray-100
+        bg-transparent;
+
+        &.button-text,
+        & .button-text {
+          @apply
+          text-primary-500
+          hover:text-primary-700;
         }
       }
     }
