--- a/assets/scss/layouts/default.scss
+++ b/assets/scss/layouts/default.scss
@@ -10,17 +10,22 @@
     &-background {
 
     }
+
     &-container {
       @apply
       py-10
-      px-8
       container
       mx-auto
       max-w-screen-xl
       space-y-14;
     }
-
+    &-sidebar {
+      @apply lg:pr-6 lg:pt-20;
+    }
     &-content {
+      &--sidebar {
+        @apply grid lg:grid-cols-[20%_1fr];
+      }
     }
 
     &-full-section {
