feat: added seamless video player

--- a/assets/scss/components/molecules/video.scss
+++ b/assets/scss/components/molecules/video.scss
@@ -4,25 +4,7 @@
 
 @layer components {
   .video-player {
-    &:not(.loaded):before {
-      content: ' ';
-      display: block;
-      position: absolute;
-      top: 0;
-      background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADGCAYAAAAT+OqFAAAAdklEQVQoz42QQQ7AIAgEF/T/D+kbq/RWAlnQyyazA4aoAB4FsBSA/bFjuF1EOL7VbrIrBuusmrt4ZZORfb6ehbWdnRHEIiITaEUKa5EJqUakRSaEYBJSCY2dEstQY7AuxahwXFrvZmWl2rh4JZ07z9dLtesfNj5q0FU3A5ObbwAAAABJRU5ErkJggg==');
-      background-position: top;
-      background-repeat: repeat-x;
-      height: 60px;
-      padding-bottom: 50px;
-      width: 100%;
-      transition: all 0.2s cubic-bezier(0, 0, 0.2, 1);
-      z-index: 1;
-    }
-    &:after {
-      content: ' ';
-      display: block;
-      padding-bottom: 56.25%;
-    }
+    @apply block;
 
     .play {
       width: 68px;
@@ -39,6 +21,7 @@
       transition: filter 0.1s cubic-bezier(0, 0, 0.2, 1);
       border: none;
     }
+
     &:hover .play {
       filter: none;
     }
