feat: finished video page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @use "assets/scss/components/atoms/badge";
 @use "assets/scss/components/atoms/buttons";
 @use "assets/scss/components/atoms/icons";
+@use "assets/scss/components/atoms/filter";
 
 @use "assets/scss/components/molecules/blogCard";
 @use "assets/scss/components/molecules/callToActionBanner";
