refactor: added counter and fixed author link

--- a/assets/scss/components/atoms/filter.scss
+++ b/assets/scss/components/atoms/filter.scss
@@ -172,9 +172,11 @@
             @apply
             ml-1.5
             rounded
+            rounded-full
             bg-gray-200
             py-0.5
             px-1.5
+              mr-1
             text-xs
             font-semibold
             tabular-nums
